--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,7 +13,9 @@
 }
 
 .box-two {
-    background-color: blue;
+    background-color: green;
+    padding: 20px;
     margin: 20px;
     border: 0 solid yellow;
+    border-width: 20px
 }
